[package]
name = "qlora-paste"
version = "1.0.22"
authors = [
    "David Tolnay <dtolnay@gmail.com>",
    "Tyler Zervas <tz-dev@vectorweight.com>"
]
categories = ["development-tools", "no-std", "no-std::no-alloc"]
description = "Macros for all your token pasting needs - Maintained fork of paste"
documentation = "https://docs.rs/qlora-paste"
edition = "2018"
keywords = ["macros"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/tzervas/qlora-paste"
rust-version = "1.31"

[lib]
proc-macro = true

[dev-dependencies]
qlora-paste-test-suite = { path = "tests/macros" }
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }

[workspace]
members = ["tests/macros"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
